# alain-utils

./: .gitmessage  README.md  pose.py  pyproject.toml  setup.py
.github/workflows/: commit-linting.yml  package-testing.yml  python-package-conda.yml
alutils/: __init__.py  base.py  bbox.py  bbox_old_with_xyxy_mode.py  camera.py  cameras.py  color.py  config.py  decorators.py  folders.py  kalman_filter.py  loggers.py  plotly.py  pose.py  ransac.py  so3.py  test.py  video.py
alutils/optimization/: __init__.py  grid_search.py
alutils/plotly/: __init__.py  plotly.py  utils.py
alutils/ros/: ros_markers.py  ros_pointclouds.py
alutils/symbolic/: polynomial.py
alutils/tests/: bbox_test.py  pose_test.py
tests/: test_bbox.py  test_color.py  test_fail.py  test_pose.py
