[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alain-utils-package"
version = "0.1.1"
description = "Python Alain Utils Package"
authors = [
    { name = "Alain Schoebi", email = "alain.schoebi@gmx.ch" }
]
dependencies = [
    "numpy",
    "colorama",
    "scipy"
]