[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alain-utils-package"
version = "0.1.1"
description = "Python Alain Utils Package"
authors = [
    { name = "Alain Schoebi", email = "alain.schoebi@gmx.ch" }
]
requires-python = ">=3.10"
dependencies = [
    "pytest",
    "numpy",
    "colorama",
    "scipy",
]

[tool.setuptools]
packages = ["alutils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"